<resources>
    <string name="app_name">Pharmacy app</string>
    <string name="underlined_login"><u>Login</u></string>
    <string name="login">Login</string>
    <string name="account">Account</string>
    <string name="error">Error</string>
    <string name="enter_the_data">Enter the data</string>
    <string name="cheboksary">Cheboksary</string>
    <string name="novocheboksarsk">Novocheboksarsk</string>
    <string name="skip">Skip</string>
    <string name="underlined_skip"><u>Skip</u></string>
    <string name="log_in">Log in</string>
    <string name="underlined_log_in"><u>Log in</u></string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="create_your_new_account">Create your new account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="city">City</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="error_in_getting_the_id">Error in getting the ID</string>
    <string name="book_products_at_pharmacies_at_a_bargain_price">Book products at pharmacies at a bargain price</string>
    <string name="get_discounts">Get discounts</string>
    <string name="log_in_to_get_more_benefits">Log in to get more benefits!</string>
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="try_again">Try again</string>
    <string name="delete_an_account">Delete an account</string>
    <string name="edit_data">Edit data</string>
    <string name="edit_data_your_account">Edit data your account</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="the_data_has_been_successfully_edited">The data has been successfully edited</string>
    <string name="do_you_really_want_to_delete_your_account">Do you really want to delete your account?</string>
    <string name="after_deleting_the_account_all_data_about_it_will_be_deleted">After deleting the account, all data about it will be deleted.</string>
    <string name="delete">Delete</string>
    <string name="log_out">Log out</string>
    <string name="log_out_of_your_account">Log out of your account?</string>
    <string name="do_you_want_to_log_in_later">Do you want to log in later?</string>
    <string name="medicines_and_dietary_supplements">Medicines and dietary supplements</string>
    <string name="medical_devices">Medical devices</string>
    <string name="hygiene_and_care">Hygiene and care</string>
    <string name="optics">Optics</string>
    <string name="mom_and_baby">Mom and baby</string>
    <string name="orthopedic_products">Orthopedic products</string>
    <string name="blood_pressure_relief_products">Blood pressure relief products</string>
    <string name="vitamins_for_the_heart_blood_vessels">Vitamins for the heart / blood vessels</string>
    <string name="blood_pressure_medications">Blood pressure medications</string>
    <string name="restoration_of_the_gastrointestinal_microflora">Restoration of the gastrointestinal microflora</string>
    <string name="anti_ulcer_agents">Anti ulcer agents</string>
    <string name="heartburn">Heartburn</string>
    <string name="antimicrobial_agents">Antimicrobial agents</string>
    <string name="antiviral_agents">Antiviral agents</string>
    <string name="remedies_for_sore_throat">Remedies for sore throat</string>
    <string name="remedies_for_the_common_cold">Remedies for the common cold</string>
    <string name="cough_remedies">Cough remedies</string>
    <string name="sedatives">Sedatives</string>
    <string name="sleeping_pills">Sleeping pills</string>
    <string name="vitamins_for_the_whole_family">Vitamins for the whole family</string>
    <string name="painkillers">Painkillers</string>
    <string name="antibiotics">Antibiotics</string>
    <string name="herbs">Herbs</string>
    <string name="toothpaste">Toothpaste</string>
    <string name="mouthwash">Mouthwash</string>
    <string name="toothbrushes_floss">Toothbrushes / Floss</string>
    <string name="blood_pressure_monitors">Blood pressure monitors</string>
    <string name="inhalers">Inhalers</string>
    <string name="thermometers">Thermometers</string>
    <string name="glucose_meters">Glucose meters</string>
    <string name="applicators">Applicators</string>
    <string name="massagers">Massagers</string>
    <string name="crutches_canes">Crutches / canes</string>
    <string name="ear_hygiene">Ear hygiene</string>
    <string name="acne_treatment">Acne Treatment</string>
    <string name="diapers">Diapers</string>
    <string name="cotton_pads">Cotton pads</string>
    <string name="soap">Soap</string>
    <string name="antiseptic_gels_and_sprays">Antiseptic gels and sprays</string>
    <string name="shaving_products">Shaving products</string>
    <string name="cotton_swabs">Cotton swabs</string>
    <string name="toilet_paper">Toilet paper</string>
    <string name="napkins">Napkins</string>
    <string name="washcloths">Washcloths</string>
    <string name="shoe_covers">Shoe covers</string>
    <string name="contact_lens_solutions">Contact lens solutions</string>
    <string name="contact_lenses">Contact lenses</string>
    <string name="glasses_for_vision">Glasses for vision</string>
    <string name="accessories_for_glasses_and_lenses">Accessories for glasses and lenses</string>
    <string name="baby_soap">Baby soap</string>
    <string name="diapers_for_children">Diapers for children</string>
    <string name="baby_toothbrushes">Baby toothbrushes</string>
    <string name="pacifier_nipples">Pacifier nipples</string>
    <string name="children_s_accessories">Children\'s accessories</string>
    <string name="feeding_bottles_drinking_bowls">Feeding bottles / drinking bowls</string>
    <string name="bottle_pacifier">Bottle pacifier</string>
    <string name="children_s_tableware">Children\'s tableware</string>
    <string name="pacifier_clip">Pacifier clip</string>
    <string name="bibs_and_bibs">Bibs and bibs</string>
    <string name="rattles">Rattles</string>
    <string name="bottle_brushes">Bottle brushes</string>
    <string name="powder">Powder</string>
    <string name="orthopedic_belt">Orthopedic belt</string>
    <string name="bandages">Bandages</string>
    <string name="the_reclinator">The reclinator</string>
    <string name="the_mattress_is_decongestant">The mattress is decongestant</string>
    <string name="orthopedic_corset_retainer">Orthopedic corset / retainer</string>
    <string name="orthopedic_insoles">Orthopedic insoles</string>
    <string name="orthopedic_pillows">Orthopedic pillows</string>
    <string name="catalog">Catalog</string>
    <string name="basket">Basket</string>
    <string name="my_card">My card</string>
    <string name="main">Main</string>
    <string name="sorting">Sorting</string>
    <string name="filters">Filters</string>
    <string name="discounted_product">Discounted product</string>
    <string name="availability_in_pharmacies">Availability in pharmacies</string>
    <string name="price">Price</string>
    <string name="from">From</string>
    <string name="up_to">Up to</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="selected">Selected %1$s</string>
    <string name="select_an_address">Select an address</string>
    <string name="clear">Clear</string>
    <string name="apply">Apply</string>
    <string name="addresses_selected">Addresses selected</string>
    <string name="rubles">rubles</string>
    <string name="with_a_club_card">With a club card</string>
    <string name="ruble_sign">₽</string>
    <string name="the_list_is_empty">The list is empty</string>
    <string name="application_version">Application version</string>
    <string name="favourites">Favourites</string>
    <string name="if_you_log_out_of_your_account_all_product_information_from_the_favorites_section_will_be_deleted">If you log out of your account, all product information from the «Favorites» section will be deleted.</string>
    <string name="do_you_really_want_to_get_out">Do you really want to get out?</string>
    <string name="by_ascending_price">By ascending price</string>
    <string name="by_descending_price">By descending price</string>
    <string name="by_discount_amount">By discount amount</string>
    <string name="the_product_was_removed_from_the_favorites_section">The product was removed from the «Favorites» section</string>
    <string name="to_favorites">To favorites</string>
    <string name="availability">Availability</string>
    <string name="available_in">Available in</string>
    <string name="pharmacies">pharmacies</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="pharmacy">pharmacy</string>
    <string name="delete_from_favorites">Delete from Favorites</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="discount">Discount</string>
    <string name="basic_information">Basic information</string>
    <string name="instruction_manual">Instruction manual</string>
    <string name="try_again_later">Try again later</string>
    <string name="mo">Mo</string>
    <string name="tu">Tu</string>
    <string name="we">We</string>
    <string name="th">Th</string>
    <string name="fr">Fr</string>
    <string name="sa">Sa</string>
    <string name="su">Su</string>
    <string name="in_stock">In stock</string>
    <string name="in_the_shopping_cart">In the shopping cart</string>
    <string name="add_to_the_shopping_cart">Add to the shopping cart</string>
    <string name="category">Category: </string>
    <string name="are_you_sure_you_want_to_delete_the_selected_products_it_will_be_impossible_to_cancel_this_action">Are you sure you want to delete the selected products? It will be impossible to cancel this action.</string>
    <string name="removing_items_from_the_shopping_cart">Removing items from the shopping cart</string>
    <string name="server_error">Server error</string>
    <string name="connection_error">Connection error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="account_deleted">Account deleted</string>
    <string name="invalid_value">Invalid value</string>
    <string name="the_basket_is_empty">The basket is empty</string>
    <string name="place_an_order">Place an order</string>
    <string name="on_the_map">On the map</string>
    <string name="choose">Choose</string>
    <string name="available_out_of">Available</string>
    <string name="all_products_are_in_stock">All products are in stock</string>
    <string name="making_an_order">Making an order</string>
    <string name="select_all">Select all</string>
    <string name="delete_selected_ones">Delete selected ones</string>
    <string name="increase_the_quantity_of_goods_by_one">Increase the quantity of goods by one</string>
    <string name="reduce_the_number_of_items_by_one">Reduce the number of items by one</string>
    <string name="pcs">pcs.</string>
    <string name="to_apply_the_discount_show_the_qr_code_at_the_checkout">To apply the discount, show the QR code at the checkout</string>
    <string name="log_in_to_your_account_to_receive_club_discounts_and_great_deals">Log in to your account to receive club discounts and great deals!</string>
    <string name="quantity">Quantity:</string>
    <string name="the_order_has_been_placed">The order has been placed: %1$s</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="repeat_the_current_password">Repeat the current password</string>
</resources>