<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?attr/background"
    tools:context=".tabs.basket.BasketFragment">

    <include
        android:id="@+id/layoutPendingResultBasket"
        layout="@layout/pending_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/layoutControlPanelBasket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:background="@drawable/shape_card_corner_bottom"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/checkBoxSelectAllProductInBasket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_all"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/bDeleteSelectedProductsFromBasket"
                style="@style/PharmacyApp.ButtonDelete.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:text="@string/delete_selected_ones"
                app:icon="@drawable/ic_delete" />
        </FrameLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvEmptyListBasket"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="@style/TextAppearance.Material3.DisplayMedium"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/the_basket_is_empty"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBasket"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_basket"/>

        <Button
            android:id="@+id/bGoToOrderMaking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/place_an_order" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>



</LinearLayout>